Corrected logos z-index and position

--- a/assets/css/2-base/_base.sass
+++ b/assets/css/2-base/_base.sass
@@ -14,5 +14,5 @@ a
 
 h1
   font-size: 36px
-  font-weight: lighter
+  font-weight: normal
   margin: 0px
