--- a/assets/css/3-sections/_sections.sass
+++ b/assets/css/3-sections/_sections.sass
@@ -53,3 +53,5 @@ a.button
   max-width: 920px
   display: block
   margin: 0 auto
+  position: relative
+  z-index: 500
